yiltc/testsuite/negative/const_not_literal.yilt
// Top-level let with a non-const-expr value (function call) should fail.
// `const` keyword has been removed (D001); `let` at top-level replaces it.
let x = abs(-1)
